// Vitest Snapshot v1

exports[`arrayToTree 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "id": 2,
        "name": "部门2",
        "pid": 1,
      },
      {
        "children": [
          {
            "children": [
              {
                "children": [],
                "id": 5,
                "name": "部门5",
                "pid": 4,
              },
            ],
            "id": 4,
            "name": "部门4",
            "pid": 3,
          },
        ],
        "id": 3,
        "name": "部门3",
        "pid": 1,
      },
    ],
    "id": 1,
    "name": "部门1",
    "pid": 0,
  },
]
`;

exports[`eachTree 1`] = `
[
  {
    "deep": 1,
    "index": 0,
    "node": {
      "children": [
        {
          "children": [],
          "id": 2,
          "name": "部门2",
          "pid": 1,
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "id": 5,
                  "name": "部门5",
                  "pid": 4,
                },
              ],
              "id": 4,
              "name": "部门4",
              "pid": 3,
            },
          ],
          "id": 3,
          "name": "部门3",
          "pid": 1,
        },
      ],
      "id": 1,
      "name": "部门1",
      "pid": 0,
    },
    "parent": null,
  },
  {
    "deep": 2,
    "index": 0,
    "node": {
      "children": [],
      "id": 2,
      "name": "部门2",
      "pid": 1,
    },
    "parent": {
      "children": [
        {
          "children": [],
          "id": 2,
          "name": "部门2",
          "pid": 1,
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "id": 5,
                  "name": "部门5",
                  "pid": 4,
                },
              ],
              "id": 4,
              "name": "部门4",
              "pid": 3,
            },
          ],
          "id": 3,
          "name": "部门3",
          "pid": 1,
        },
      ],
      "id": 1,
      "name": "部门1",
      "pid": 0,
    },
  },
  {
    "deep": 2,
    "index": 1,
    "node": {
      "children": [
        {
          "children": [
            {
              "children": [],
              "id": 5,
              "name": "部门5",
              "pid": 4,
            },
          ],
          "id": 4,
          "name": "部门4",
          "pid": 3,
        },
      ],
      "id": 3,
      "name": "部门3",
      "pid": 1,
    },
    "parent": {
      "children": [
        {
          "children": [],
          "id": 2,
          "name": "部门2",
          "pid": 1,
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "id": 5,
                  "name": "部门5",
                  "pid": 4,
                },
              ],
              "id": 4,
              "name": "部门4",
              "pid": 3,
            },
          ],
          "id": 3,
          "name": "部门3",
          "pid": 1,
        },
      ],
      "id": 1,
      "name": "部门1",
      "pid": 0,
    },
  },
  {
    "deep": 3,
    "index": 0,
    "node": {
      "children": [
        {
          "children": [],
          "id": 5,
          "name": "部门5",
          "pid": 4,
        },
      ],
      "id": 4,
      "name": "部门4",
      "pid": 3,
    },
    "parent": {
      "children": [
        {
          "children": [
            {
              "children": [],
              "id": 5,
              "name": "部门5",
              "pid": 4,
            },
          ],
          "id": 4,
          "name": "部门4",
          "pid": 3,
        },
      ],
      "id": 3,
      "name": "部门3",
      "pid": 1,
    },
  },
  {
    "deep": 4,
    "index": 0,
    "node": {
      "children": [],
      "id": 5,
      "name": "部门5",
      "pid": 4,
    },
    "parent": {
      "children": [
        {
          "children": [],
          "id": 5,
          "name": "部门5",
          "pid": 4,
        },
      ],
      "id": 4,
      "name": "部门4",
      "pid": 3,
    },
  },
]
`;

exports[`mapTree 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "id": 2,
        "name": "部门2哈哈哈",
        "pid": 1,
      },
      {
        "children": [
          {
            "children": [
              {
                "children": [],
                "id": 5,
                "name": "部门5哈哈哈",
                "pid": 4,
              },
            ],
            "id": 4,
            "name": "部门4哈哈哈",
            "pid": 3,
          },
        ],
        "id": 3,
        "name": "部门3哈哈哈",
        "pid": 1,
      },
    ],
    "id": 1,
    "name": "部门1哈哈哈",
    "pid": 0,
  },
]
`;
